--- a/authenticate-me/frontend/src/components/Navigation/Navigation.css
+++ b/authenticate-me/frontend/src/components/Navigation/Navigation.css
@@ -1,5 +1,4 @@
 * {
-  width: block;
   margin: 0;
   padding: 0;
 }
@@ -10,12 +9,15 @@
 
 nav {
   display: block;
-  /* border-bottom: 1px slategray inset; */
+  border-bottom: 1px lightgray solid;
+
 }
 
 #site-logo {
-  height: 50px;
+  height: 40px;
   cursor: pointer;
+  border: 0px;
+  display: flex;
 }
 
 .navbar {
@@ -25,10 +27,10 @@ nav {
   flex-wrap: nowrap;
   padding: 0px;
   box-sizing: border-box;
-  margin: 0px 10px;
-  border: 0;
+  margin: 10px 30px;
+  border: 0px;
+  /* border-bottom: 1px black solid; */
 }
-
 
 .nav-buttons-wrapper {
   display: flex;
@@ -38,5 +40,37 @@ nav {
   padding: 0;
   width: 200px;
   justify-content: space-around;
+}
+
+.menu-item {
+  cursor: pointer;
+}
+
+.features-bar {
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  height: 80px;
+}
+
+.features-bar-button {
+  all: unset;
+  cursor: pointer;
+  font-size: 18pt;
+}
+
+#fb-events-button,
+#fb-groups-button {
+  margin: 15px;
+  font-family: Arial, Helvetica, sans-serif;
+  color: gray;
+  padding: 5px 10px;
+  border: 2px solid grey;
+  border-radius: 10px;
 
 }
+
+/* .selected {
+  border: 2px solid grey;
+  border-radius: 10px;
+} */
