--- a/authenticate-me/frontend/src/components/Groups/SingleGroupPage.css
+++ b/authenticate-me/frontend/src/components/Groups/SingleGroupPage.css
@@ -17,6 +17,7 @@
   margin-bottom: 20px;
   text-align: left;
   width: 60%;
+  margin-left: 20px;
 }
 
 .single-group-page-image {
@@ -24,7 +25,6 @@
   border-radius: 10px;
   margin-bottom: 20px;
   box-shadow: 0px 0px 10px #ccc;
-  margin-right: 20px;
 }
 
 .single-group-page-info {
