--- a/authenticate-me/frontend/src/components/Groups/GroupForm.css
+++ b/authenticate-me/frontend/src/components/Groups/GroupForm.css
@@ -1,9 +1,56 @@
-  .entire-group-form {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    max-width: 800px;
-    align-content: center;
-    align-items: center;
+div#create-group-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-self: center;
+  width: 550px;
+  height: 650px;
+  border-radius: 2em;
+  margin-top: 60px;
+  background-color: white;
+  /* background: linear-gradient(135deg, rgb(247, 216, 216), rgb(240, 240, 180), rgb(189, 238, 189)); */
+  box-shadow: -3px 3px 10px 1px #888888;
+}
 
-  }
+form#group-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 460px;
+  margin-bottom: 20px;
+
+}
+
+#group-form__title {
+  font-size: 30pt;
+  font-weight: 500;
+  margin-top: 30px;
+  width: 460px;
+  margin-bottom: 15px;
+}
+
+#group-form__title::before {
+  content: "";
+  position: absolute;
+  height: 3px;
+  width: 136px;
+  background: green;
+  margin: 51px 0 0 0;
+}
+
+#group-form__error-list {
+  margin: 0;
+  margin: 10px 0;
+  list-style: none;
+  width: 460px;
+  height: 80px;
+  padding: 0;
+  font-size: 10pt;
+}
+
+.group-form__block:not(.group-form__private) {
+  display: flex;
+  flex-direction: column;
+}
+
+# .group-form__label {}
