--- a/authenticate-me/frontend/src/index.css
+++ b/authenticate-me/frontend/src/index.css
@@ -1,1 +1,24 @@
 /* TODO Add site wide styles */
+body {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  /* position: relative; */
+}
+
+#root {
+  all: unset;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  margin: 70px 0 80px;
+}
+
+/* footer {
+  min-height: 40px;
+  max-height: 40px;
+  background-color: darkslategrey;
+} */
