--- a/authenticate-me/frontend/src/components/Groups/GroupForm.css
+++ b/authenticate-me/frontend/src/components/Groups/GroupForm.css
@@ -4,11 +4,11 @@ div#create-group-page {
   align-items: center;
   align-self: center;
   width: 550px;
-  height: 650px;
-  border-radius: 2em;
+  height: 725px;
   margin-top: 60px;
+  border-radius: 2em;
   background-color: white;
-  /* background: linear-gradient(135deg, rgb(247, 216, 216), rgb(240, 240, 180), rgb(189, 238, 189)); */
+  background: linear-gradient(135deg, #e0f7e3, #f7dfdb, #f5e7d7, #ccf2f7);
   box-shadow: -3px 3px 10px 1px #888888;
 }
 
@@ -18,12 +18,11 @@ form#group-form {
   align-items: center;
   width: 460px;
   margin-bottom: 20px;
-
 }
 
 #group-form__title {
   font-size: 30pt;
-  font-weight: 500;
+  font-weight: 400;
   margin-top: 30px;
   width: 460px;
   margin-bottom: 15px;
@@ -32,15 +31,14 @@ form#group-form {
 #group-form__title::before {
   content: "";
   position: absolute;
-  height: 3px;
-  width: 136px;
-  background: green;
+  height: 4px;
+  width: 132px;
+  background: linear-gradient(90deg, #95ebf7, #f7ab9d, #f7c893, #acd1b2);
   margin: 51px 0 0 0;
 }
 
 #group-form__error-list {
   margin: 0;
-  margin: 10px 0;
   list-style: none;
   width: 460px;
   height: 80px;
@@ -49,8 +47,85 @@ form#group-form {
 }
 
 .group-form__block:not(.group-form__private) {
-  display: flex;
-  flex-direction: column;
+  width: 460px;
 }
 
-# .group-form__label {}
+.group-form__block.group-form__private>label {
+  margin: 0;
+}
+
+.group-form__block.group-form__private {
+  margin: 15px 0 0 0;
+  width: 300px;
+  align-items: center;
+  justify-content: space-evenly;
+  box-sizing: border-box;
+
+}
+
+
+.group-form__block>select {
+  height: 29px;
+  box-sizing: border-box;
+  border: none;
+  outline: none;
+  font-family: 'Poppins', sans-serif;
+  background: transparent;
+  border-bottom: 1px solid #f65858;
+  border-radius: 6px;
+  transition: 0.5s;
+}
+
+.group-form__block>input {
+  height: 29px;
+  border: none;
+  outline: none;
+  background: transparent;
+  font-family: 'Poppins', sans-serif;
+  border-radius: 6px;
+  transition: 0.5s;
+  border-bottom: 1px solid #f65858;
+  box-sizing: border-box;
+}
+
+.group-form__block>select:focus,
+#about-input:focus,
+.group-form__block>input:focus {
+  background: white;
+  transition: 0.5s;
+  border: 1px solid #f65858;
+}
+
+.group-form__block>select:hover,
+#about-input:hover,
+.group-form__block>input:hover {
+  background: white;
+  transition: 0.5s;
+}
+
+#about-input {
+  height: 75px;
+  width: 460px;
+  border: none;
+  outline: none;
+  font-family: 'Poppins', sans-serif;
+  overflow: hidden auto;
+  resize: none;
+  box-sizing: border-box;
+  border-bottom: 1px solid #f65858;
+  border-radius: 6px;
+  background: transparent;
+  transition: 0.5s;
+}
+
+#create-group-button-div {
+  display: flex;
+  margin-top: 25px;
+  height: 40px;
+  justify-content: space-between;
+  width: 100%;
+}
+
+#group-form__title.edit-form::before {
+  width: 80px;
+}
