--- a/authenticate-me/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/authenticate-me/frontend/src/components/LoginFormModal/LoginForm.css
@@ -27,6 +27,7 @@
   width: 400px;
   height: 60px;
   margin: 0;
+  padding: 0;
 }
 
 #log-in__label {
@@ -37,7 +38,7 @@
   font-weight: 600;
 }
 
-#log-in__input {
+.log-in__input {
   box-sizing: border-box;
   height: 24px;
   width: 100%;
