--- a/authenticate-me/frontend/src/components/SignupFormModal/SignupForm.css
+++ b/authenticate-me/frontend/src/components/SignupFormModal/SignupForm.css
@@ -4,7 +4,7 @@
   background: url('../../images/background.png');
   width: 470px;
   margin: auto;
-  height: 800px;
+  height: 820px;
 }
 
 #sign-up__title {
@@ -25,8 +25,9 @@
   font-size: 10pt;
   align-content: left;
   width: 400px;
-  height: 125px;
+  height: 140px;
   margin: 0;
+  padding: 0;
 }
 
 .sign-up__error {}
