--- a/authenticate-me/frontend/src/components/Navigation/Navigation.css
+++ b/authenticate-me/frontend/src/components/Navigation/Navigation.css
@@ -148,17 +148,33 @@
 .modal-menu-item {
   background-color: white;
   border-radius: 6px;
-  font-size: 12pt;
+  font-size: 10pt;
   text-align: left;
-  width: 300px;
-  height: 35px;
-  color: gray;
+  width: 180px;
+  height: 30px;
+  color: black;
   justify-items: center;
   margin-left: 20px;
-  margin-top: 5px;
+  margin-top: 0px;
+  align-self: center;
 }
 
+.menu-div {
+  width: 80%;
+  height: 1px;
+  background-color: lightgrey;
+  margin-left: 15px;
+  margin-bottom: 3px;
+}
 
+.hide-nav-items {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  box-sizing: border-box;
+  height: 100%;
+  margin-right: 10px;
+}
 
 @media screen and (max-width: 650px) {
   .nav-buttons-wrapper {
