--- a/authenticate-me/frontend/src/index.css
+++ b/authenticate-me/frontend/src/index.css
@@ -11,7 +11,7 @@ body {
   all: unset;
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 100vw;
   height: 100%;
   background-size: cover;
 
@@ -22,3 +22,4 @@ body {
   max-height: 40px;
   background-color: darkslategrey;
 } */
+/*  */
