--- a/authenticate-me/frontend/src/components/Events/EventForm.css
+++ b/authenticate-me/frontend/src/components/Events/EventForm.css
@@ -41,9 +41,10 @@ form#event-form {
   margin: 0;
   list-style: none;
   width: 460px;
-  height: 80px;
+  height: 92px;
   padding: 0;
   font-size: 10pt;
+  color: #f65858;
 }
 
 .event-form__block:not(.event-form__private) {
@@ -87,6 +88,7 @@ form#event-form {
   border-bottom: 1px solid #f65858;
   box-sizing: border-box;
 }
+
 
 .event-form__block>select:focus,
 #description:focus,
