--- a/authenticate-me/frontend/src/components/Groups/GroupForm.css
+++ b/authenticate-me/frontend/src/components/Groups/GroupForm.css
@@ -44,6 +44,7 @@ form#group-form {
   height: 80px;
   padding: 0;
   font-size: 10pt;
+  color: #f65858;
 }
 
 .group-form__block:not(.group-form__private) {
