--- a/authenticate-me/frontend/src/index.css
+++ b/authenticate-me/frontend/src/index.css
@@ -1,10 +1,18 @@
 /* TODO Add site wide styles */
+
+/* hides scrollbar */
+/* ::-webkit-scrollbar {
+  display: none;
+} */
+
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   /* position: relative; */
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 #root {
