--- a/authenticate-me/frontend/src/components/ImagePreview/ImagePreview.css
+++ b/authenticate-me/frontend/src/components/ImagePreview/ImagePreview.css
@@ -11,3 +11,16 @@
   justify-content: center;
   border-radius: 4px;
 }
+
+.group-page-header-image-container {
+  width: 600px;
+  height: 338px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.group-page-header-image {
+  max-width: 600px;
+  max-height: 338px;
+}
