--- a/authenticate-me/frontend/src/components/ImagePreview/ImagePreview.css
+++ b/authenticate-me/frontend/src/components/ImagePreview/ImagePreview.css
@@ -33,8 +33,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-left: 20px;
-  padding-top: 18px;
+  padding-left: 22px;
+  padding-top: 22px;
 }
 
 .event-index-card-image {
@@ -42,60 +42,20 @@
   max-width: 160px;
 }
 
-h2.event-index-card-item {
-  font-size: 1rem;
-  font-weight: 500;
-  margin: 0;
-}
 
 
-div.events-index-container {
-  /* width: 1000px; */
-  display: flex;
-  flex-direction: column;
-  background: white;
-  width: 600px;
-}
-
-div.event-index-cards-click {
-  height: 170px;
-  padding: 10px 0 20px;
-  width: 600px;
-  display: flex;
-  background: white;
+.group-index-card-image-container {
+  width: 178px;
+  height: 100px;
   box-sizing: border-box;
-  border-bottom: 1px solid lightgray;
-}
-
-
-div.event-index-card-component,
-ul.event-index-card-component {
-  padding: 0;
-  margin: 0 0 0 30px;
-
-}
-
-.event-index-card {
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-
+  align-items: center;
+  justify-content: center;
+  padding-left: 22px;
+  padding-top: 22px;
 }
 
-
-.event-index-card,
-h2.event-index-card-item,
-li.event-index-card-item {
-  list-style: none;
-  color: black;
-  width: 400px;
-  line-height: 22px;
-}
-
-
-div.event-index-card-component {
-  display: inherit;
-  justify-content: space-between;
-  flex-direction: row;
-  color: gray
+.group-index-card-image {
+  max-width: 178px;
+  max-height: 100px;
 }
