--- a/authenticate-me/frontend/src/components/ImagePreview/ImagePreview.css
+++ b/authenticate-me/frontend/src/components/ImagePreview/ImagePreview.css
@@ -9,7 +9,7 @@
   width: auto;
   display: flex;
   justify-content: center;
-  border-radius: 4px;
+  border-radius: 1rem;
 }
 
 .group-page-header-image-container {
