--- a/authenticate-me/frontend/src/components/Navigation/Navigation.css
+++ b/authenticate-me/frontend/src/components/Navigation/Navigation.css
@@ -26,7 +26,7 @@
   align-content: center;
   flex-direction: row;
   justify-content: flex-end;
-  width: 260px;
+  width: 272px;
   box-sizing: border-box;
   height: 100%;
   margin-right: 10px;
@@ -84,10 +84,11 @@
   height: 100%;
   cursor: pointer;
   flex-direction: column;
-  font-size: 9pt;
+  font-size: 8pt;
   justify-content: center;
   color: black;
   transition: 0.5s;
+  letter-spacing: 0.5px;
 }
 
 .navbar-button:hover {
