--- a/authenticate-me/frontend/src/components/IconDescriptionCard/IconDescriptionCard.css
+++ b/authenticate-me/frontend/src/components/IconDescriptionCard/IconDescriptionCard.css
@@ -47,3 +47,7 @@ div.icon-description-card-element-subheading {
   color: grey;
   font-weight: 400;
 }
+
+#group-page-oragnizer-element {
+  background: transparent;
+}
