--- a/authenticate-me/frontend/src/components/Groups/SingleGroupPage.css
+++ b/authenticate-me/frontend/src/components/Groups/SingleGroupPage.css
@@ -49,6 +49,8 @@ h2#single-group-page-name {
   height: 80px;
   justify-content: center;
   border-bottom: 1px solid lightgray;
+  position: sticky;
+  top: 70px;
 }
 
 .single-group-page-navbar-container {
@@ -87,15 +89,32 @@ h2#single-group-page-name {
   height: auto;
   display: flex;
   justify-content: center;
+  margin-bottom: 70px;
 }
 
 .group-property-page-wrapper {
   width: 1100px;
   padding-top: 40px;
+  display: flex;
+  flex-direction: row;
 }
 
 .group-propery-page-element {
   width: 660px;
-  line-height: 24px;
+  font-size: 11pt;
+  line-height: 26px;
+  letter-spacing: 1px;
   font-weight: 300;
+}
+
+.group-property-page-section {
+  width: 310px;
+  padding-left: 40px;
+}
+
+.group-property-page-section-header {
+  font-size: 20px;
+  font-weight: 400;
+  margin-bottom: 0;
+  padding-left: 24px;
 }
