--- a/authenticate-me/frontend/src/components/FeaturesBar/features-bar.css
+++ b/authenticate-me/frontend/src/components/FeaturesBar/features-bar.css
@@ -40,6 +40,10 @@ div.features-bar-component {
   color: #008294;
 }
 
+.group-navbar-navlink-active {
+  color: #008294;
+}
+
 .features-bar-navlink-active::after {
   content: "";
   position: absolute;
