--- a/authenticate-me/frontend/src/components/Events/EventForm.css
+++ b/authenticate-me/frontend/src/components/Events/EventForm.css
@@ -44,7 +44,7 @@ form#event-form {
   height: 92px;
   padding: 0;
   font-size: 10pt;
-  color: #f65858;
+  color: var(--site-red);
 }
 
 
@@ -57,7 +57,7 @@ form#event-form {
   overflow: hidden auto;
   resize: none;
   box-sizing: border-box;
-  border-bottom: 1px solid #f65858;
+  border-bottom: 1px solid var(--site-red);
   border-radius: 6px;
   background: transparent;
   transition: 0.5s;
