--- a/authenticate-me/frontend/src/index.css
+++ b/authenticate-me/frontend/src/index.css
@@ -4,6 +4,10 @@
 /* ::-webkit-scrollbar {
   display: none;
 } */
+:root {
+  --site-blue: #008294;
+  --site-red: #f65858;
+}
 
 body {
   font-family: 'Graphik', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
