--- a/authenticate-me/frontend/src/components/MembershipsPage/MembershipsPage.css
+++ b/authenticate-me/frontend/src/components/MembershipsPage/MembershipsPage.css
@@ -1,10 +1,17 @@
 .membership-page-background {
-  display: flex;
-  position: relative;
-  max-width: 100vw;
-  height: 160px;
+  width: 660px;
+  height: auto;
   background: white;
-  box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.25);
+}
+
+
+.membership-page-container {
+  display: flex;
+  flex-direction: column;
+  max-width: 100vw;
+  height: auto;
+  /* background: white; */
+
   justify-content: center;
   align-content: center;
 }
